# freezeblaster

./: README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
freezeblaster/: __init__.py
src/freezeblaster/: __init__.py
tests/: test_freeze_time.py
